fix: breadcrumbs on IE

--- a/_HTML/src/sass/_blocks/breadcrumbs.scss
+++ b/_HTML/src/sass/_blocks/breadcrumbs.scss
@@ -105,6 +105,7 @@
 		text-align: center;
 		color: #909090;
 		max-width: 11%;
+    width: 100%;
 		font-size: 12px;
 		font-weight: 700;
 		margin-bottom: 10px;
